# cpp-sdl-playground

./: CMakeLists.txt  README.md  drawGeometry.cpp  eventHandling.cpp  main.cpp  renderImage.cpp  textureLoading.cpp
Classes/: DuckTexture.cpp  DuckTexture.h
cmake/modules/: FindSDL2_image.cmake
